fixed: offline message on mobile

--- a/Neighbourly/css/utilities.css
+++ b/Neighbourly/css/utilities.css
@@ -94,8 +94,31 @@
 
 .overlay-content {
     margin: 0;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 0.7rem!important;
+}
+
+@media screen and (min-width: 769px) {
+    .overlay {
+        position: fixed;
+        display: grid;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, .8);
+        z-index: 999;
+    }
+    
+    .overlay-content {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1rem!important;
+        width: auto;
+    }
 }
